--- a/gamelogservice/src/main/resources/application.properties
+++ b/gamelogservice/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+server.port=8080
+spring.application.name=gamelog-service
+# mysql
+spring.datasource.url=jdbc:mysql://123.207.58.198:3306/game_log_server
+spring.datasource.username=glserver
+spring.datasource.password=asWQ2JmkIvL9x4A
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# jpa
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.show_sql=true
