--- a/gamelogservice/src/main/resources/application.properties
+++ b/gamelogservice/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.application.name=gamelog-service
 spring.datasource.url=jdbc:mysql://123.207.58.198:3306/game_log_server
 spring.datasource.username=glserver
 spring.datasource.password=asWQ2JmkIvL9x4A
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # jpa
 spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.show_sql=true
