添加路由配置和数据库存储编码

--- a/gamelogservice/src/main/resources/application.properties
+++ b/gamelogservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=gamelog-service
 # mysql
-spring.datasource.url=jdbc:mysql://123.207.58.198:3306/game_log_server
+spring.datasource.url=jdbc:mysql://123.207.58.198:3306/game_log_server?characterEncoding=utf-8
 spring.datasource.username=glserver
 spring.datasource.password=asWQ2JmkIvL9x4A
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
