--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -8,6 +8,14 @@ com.dc.logtool.out-put-path=E:\\wangyu\\testmaven
 com.dc.logtool.main-src=\\src\\main\\java
 com.dc.logtool.target-path=\\target
 
+# mongo
+spring.application.name=saveinfo-service
+spring.data.mongodb.uri=mongodb://wangyuheiyi:shmily@111.230.26.190:27017/myinfo
+spring.rabbitmq.host=111.230.26.190
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wangyuheiyi
+spring.rabbitmq.password=f5XocXKtUJFth17PS8bS
+
 # mysql
 spring.datasource.url=jdbc:mysql://111.230.26.190:3306/game_log_server?characterEncoding=utf-8
 spring.datasource.username=glserver
