修改页面和数据库字段

--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.thymeleaf.encoding=UTF-8
 com.dc.logtool.out-put-path=E:\\wangyu\\testmaven
 com.dc.logtool.main-src=\\src\\main\\java
 com.dc.logtool.target-path=\\target
+com.dc.logtool.main-resources=\\src\\main\\resources
+com.dc.logtool.service-package=service
+com.dc.logtool.bean-package=bean
+com.dc.logtool.bean-package=bean
+com.dc.logtool.dao-package=dao
+com.dc.logtool.msg-package=rbmsg
 
 # mongo
 spring.application.name=saveinfo-service
