添加接受消息服务的查询数据功能

--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -13,6 +13,7 @@ com.dc.logtool.bean-package=bean
 com.dc.logtool.bean-package=bean
 com.dc.logtool.dao-package=dao
 com.dc.logtool.msg-package=rbmsg
+com.dc.logtool.web-package=webinfo
 
 # mongo
 spring.application.name=saveinfo-service
