修改配置文件读取

--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8091
+server.port=8092
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
@@ -8,6 +8,7 @@ com.dc.logtool.out-put-path=E:\\wangyu\\testmaven
 com.dc.logtool.main-src=\\src\\main\\java
 com.dc.logtool.target-path=\\target
 com.dc.logtool.main-resources=\\src\\main\\resources
+com.dc.logtool.path-step=\\
 com.dc.logtool.service-package=service
 com.dc.logtool.bean-package=bean
 com.dc.logtool.bean-package=bean
