--- a/testthymeleaf/pom.xml
+++ b/testthymeleaf/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<docker.image.prefix>wangyuheiyi</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -68,6 +69,26 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+						<plugin>
+			    <groupId>com.spotify</groupId>
+			    <artifactId>docker-maven-plugin</artifactId>
+			    <configuration>
+					<pushImage>true</pushImage>
+					<imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</imageName>
+					<!-- 指定Dockerfile所在的路径 --> 
+					<dockerDirectory>${basedir}/src/main/resources</dockerDirectory>
+					<resources> 
+						<resource> 
+							<targetPath>/</targetPath> 
+							<directory>${project.build.directory}</directory> 
+							<include>${project.build.finalName}.jar</include> 
+						</resource> 
+					</resources> 
+					<!-- 以下两行是为了docker push到DockerHub使用的。 -->
+					<serverId>docker-hub</serverId> 
+					<registryUrl>https://index.docker.io/v1/</registryUrl>  
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
