修改文件配置

--- a/testthymeleaf/src/main/resources/Dockerfile
+++ b/testthymeleaf/src/main/resources/Dockerfile
@@ -1,5 +1,5 @@
-FROM java:8
+FROM wangyuheiyi/myalpine-java8:latest
 ADD testthymeleaf-0.0.1-SNAPSHOT.jar /testthymeleaf.jar
 RUN mkdir -p /data/myobj/output
-EXPOSE 8091
+EXPOSE 8092
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/testthymeleaf.jar"]
