修改配置文件

--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -4,11 +4,18 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 #spring.mvc.static-path-pattern=/**
 
-com.dc.logtool.out-put-path=E:\\wangyu\\testmaven
-com.dc.logtool.main-src=\\src\\main\\java
-com.dc.logtool.target-path=\\target
-com.dc.logtool.main-resources=\\src\\main\\resources
-com.dc.logtool.path-step=\\
+#com.dc.logtool.out-put-path=E:\\wangyu\\testmaven
+#com.dc.logtool.main-src=\\src\\main\\java
+#com.dc.logtool.target-path=\\target
+#com.dc.logtool.main-resources=\\src\\main\\resources
+#com.dc.logtool.path-step=\\
+
+com.dc.logtool.out-put-path=/data/myobj/output
+com.dc.logtool.main-src=/src/main/java
+com.dc.logtool.target-path=/target
+com.dc.logtool.main-resources=/src/main/resources
+com.dc.logtool.path-step=/
+
 com.dc.logtool.service-package=service
 com.dc.logtool.bean-package=bean
 com.dc.logtool.bean-package=bean
