修改数据库密码

--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -25,7 +25,7 @@ com.dc.logtool.web-package=webinfo
 
 # mongo
 spring.application.name=saveinfo-service
-spring.data.mongodb.uri=mongodb://wangyuheiyi:shmily@111.230.94.160:27017/myinfo
+spring.data.mongodb.uri=mongodb://wangyuheiyi:Shmily_19840428@111.230.94.160:27017/myinfo
 spring.rabbitmq.host=111.230.94.160
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wangyuheiyi
