修改配置文件数据

--- a/testthymeleaf/src/main/resources/application.properties
+++ b/testthymeleaf/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8092
+spring.application.name=saveinfo-service
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
@@ -24,8 +25,9 @@ com.dc.logtool.msg-package=rbmsg
 com.dc.logtool.web-package=webinfo
 
 # mongo
-spring.application.name=saveinfo-service
 spring.data.mongodb.uri=mongodb://wangyuheiyi:Shmily_19840428@111.230.94.160:27017/myinfo
+
+# rabbitmq
 spring.rabbitmq.host=111.230.94.160
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wangyuheiyi
